Closed Bug 623463 Opened 15 years ago Closed 15 years ago

Aero glass highlight effects move around when opening 2 or 3 tabs

Categories

(Firefox :: General, defect)

All
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: at.light, Assigned: roc)

References

Details

(Keywords: regression)

Attachments

(2 files)

+++ This bug was initially created as a clone of Bug #622733 +++ Bug 622733 still exists, in two ways. (These seem to happen when 2 or 3 tabs are open.) (a) Instead of the Aero glaze effect moving up behind the tab bar, it moves up only a few pixels from its usual position. STR: 1. Clean profile (relnotes + about:home will open) 2. Enable Add-on bar 3. Close about:home tab (so only one tab is open) * The glass effect moves down a fraction (height of add-on bar??) 4. open new tab * The glass effect moves up a fraction (b) When the browser is resized to a very small height, the same thing as described in bug 622733 (better description in bug 622766) happens. This case might seem trivial, but it also affects Firefox when using add-ons with panels, such as Firebug. STR: 1. Follow STR in bug 622766 or bug 622712 2. Resize window to very small height * Aero glass highlight turns into a line and hides behind tab bar, as described in those bugs ftr, the issues with glass highlight were apparently caused by bug 593604
Attached image screenshot of case (b)
(In reply to comment #0) > (a) Instead of the Aero glaze effect moving up behind the tab bar, it moves up > only a few pixels from its usual position. > > STR: > 1. Clean profile (relnotes + about:home will open) > 2. Enable Add-on bar > 3. Close about:home tab (so only one tab is open) > * The glass effect moves down a fraction (height of add-on bar??) > 4. open new tab > * The glass effect moves up a fraction cannot reproduce here. no line. Adapter Description : NVIDIA GeForce GTS 250 Vendor ID : 10de Device ID : 0615 Adapter RAM : 1024 Adapter Drivers : nvd3dum nvwgf2um,nvwgf2um Driver Version : 8.17.12.5896 Driver Date : 7-9-2010 Direct2D Enabled : true DirectWrite Enabled : true WebGL Renderer : NVIDIA Corporation -- GeForce GTS 250/PCI/SSE2 -- 3.3.0 GPU Accelerated Windows : 1/1 Direct3D 10
No line appears for case (a). The glass effect moves down and up a fraction only. These issues probably should have gone into two separate bugs. We should probably focus on case (b) for the moment, as that seems to be the more noticeable one.
FWIW, the horizontal line has always been there, I mean as long as far back as the custom titlebar code landed and I know I've seen it on other applications too. Even making the window really short never caused the line to display itself in the tab bar till recent changes as making it a certain height causes the line to come back, from the way it is normally, it never used to do that.
The rendering of that glaze effect seems to depend on what we pass as the "glass margins" for our window. And those margins depend on what we're able to infer about what's opaque in your window. That seems wrong to me but I don't know if Microsoft considers it a bug.
Attached patch fixSplinter Review
Assignee: nobody → roc
Attachment #502420 - Flags: review?(jmathies)
This fixes part (b) of comment #0. Part (a) isn't really a bug IMHO, or if it is, it's very minor (and very hard to fix).
Attachment #502420 - Flags: review?(jmathies) → review+
I just noticed scrolling a flash youtube video sometimes causes the line to appear in the tab bar, which was reported in another bug. Any chance the patch fixes that?
Comment on attachment 502420 [details] [diff] [review] fix a=beltzner
Attachment #502420 - Flags: approval2.0? → approval2.0+
Whiteboard: [needs landing]
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
Nice.. this bug does still happen if using a persona, so if we care about that we should create another bug :/
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: