Bug 623463. Don't use glass margins when we have wide horizontal margins or small opaque rect height. r=jmathies,a=beltzner If we set up glass margins based on a very small opaque rect height, the "glaze effect" starts to look stupid because it degenerates to a thin horizontal line. Also, if we have wide horizontal margins then the glaze effect will look odd. It's designed for relatively narrow borders.